// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedAppear - unit test should render default 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "bottom": 0,
      "position": "absolute",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderBottomWidth": 0,
        "borderColor": "#CCC",
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "borderWidth": 1,
        "padding": 10,
        "translateY": 100,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#002f56"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;

exports[`AnimatedAppear - unit test should render with animateIn 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "bottom": 0,
      "position": "absolute",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderBottomWidth": 0,
        "borderColor": "#CCC",
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "borderWidth": 1,
        "padding": 10,
        "translateY": 0,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#002f56"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;

exports[`AnimatedAppear - unit test should render with animateOut 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "bottom": 0,
      "position": "absolute",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderBottomWidth": 0,
        "borderColor": "#CCC",
        "borderTopLeftRadius": 50,
        "borderTopRightRadius": 50,
        "borderWidth": 1,
        "padding": 10,
        "translateY": 100,
      }
    }
  >
    <ActivityIndicator
      animating={true}
      color="#002f56"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;
